# NetworkSecurity

./: .gitignore  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  template.py
data_schema/: schema.yaml
research/: trials.ipynb
src/NetworkSecurity/conponents/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/NetworkSecurity/constants/training_pipeline/: __init__.py
src/NetworkSecurity/entity/: artifact_entity.py  config_entity.py
src/NetworkSecurity/exception/: exception.py
src/NetworkSecurity/logging/: logger.py
src/NetworkSecurity/utils/: classification_metric.py  common.py  model_estimator.py
